@@ -10,6 +10,7 @@ Bug fixes
 - #2040: handling of void responses
 - #2048: Possible contexts too restricted
 - #2083: export from CPSSkins: don't make the user fiddle with skins
+- #2086: export from CPSSkins: missing xmlns namespace with lxml engine
 - #2045: Absolute path to themes container is persistent
 - #2034: provide "cherry picking" theme negociator
 - #2032: removal of main content element if main content is empty
